--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 body {
     padding:0;
     margin: 0;
-    background: linear-gradient(to right, #ff75ff, #b4e7ff);
+    background: linear-gradient(to right, #c42cc4, #beb4ff);
 }
 
 .calculator {
@@ -19,8 +19,8 @@ body {
     min-height: 100vh;
 }
 .container {
-    outline: 3px solid #b4e7ff; /* Outline around buttons and output */
-    border-radius: 80px; /* Adjust border radius */
+    outline: 3px solid #000000; /* Outline around buttons and output */
+    border-radius: 100px; /* Adjust border radius */
     padding: 0;
     width: 420px;
     height: 500px;
@@ -56,7 +56,7 @@ body {
     font-size: 2rem;
     border:1px solid white;
     outline: none;
-    background-color: #b4e7ff;
+    background-color: #ffffff;
     margin: 10px;
     padding: 0;
 }
@@ -78,7 +78,7 @@ body {
     word-wrap: break-word;
     word-break: break-all;
     background-color: rgb(255, 255, 255, 70%);
-    height: 70px;
+    height: 90px;
     width: 300px;
     margin: 10px;
     margin-top: 10px 0;
